@@ -4,6 +4,9 @@ Products.CMFCore Changelog
 2.1.3-beta (unreleased)
 -----------------------
 
+- FSPageTemplate: Prevent reading the underlying file without doing
+  anything with the data in some cases.
+
 - tool interfaces: Replace non-existing IMember interface with the
   correct IMemberData.
 
